Temp fix for horizontal scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  /*TODO: Horizontal scroll bar...? */
+  overflow-x: hidden;
 }
 
 body {
